2000-06-04  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/big5hkscs.c: New file.
	Modified from big5.c by Roger So <rogerso@sis.dhs.org>.

	* iconvdata/gconv-modules: Add entry for new module.
	* iconvdata/Makefile (modules): Add BIG5HKSCS.
	(distribute): Add big5hkscs.c.

2000-06-01  Jakub Jelinek  <jakub@redhat.com>

	* libc/sysdeps/alpha/fpu/bits/mathinline.h: Add __THROW to all
	inlines to match prototypes in mathcalls.h.
	* libc/sysdeps/i386/fpu/bits/mathinline.h: Likewise.
	* libc/sysdeps/m68k/fpu/bits/mathinline.h: Likewise.
	* libc/sysdeps/powerpc/fpu/bits/mathinline.h: Likewise.
	* libc/sysdeps/sparc/fpu/bits/mathinline.h: Likewise.

2000-06-03  Ulrich Drepper  <drepper@redhat.com>

	* elf/elf.h (SHT_SUNW_move): Define.

	* elf/elf.h: Add more Solaris compatiblity definitions.

2000-06-03  Andreas Jaeger  <aj@suse.de>

	* sysdeps/powerpc/dl-start.S: Close open comment.

2000-06-03  Jakub Jelinek  <jakub@redhat.com>

	* inet/Versions: Fix typo in rresvport_af export.

2000-06-02  Ulrich Drepper  <drepper@redhat.com>

	* math/tgmath.h: Pretty print.

2000-06-02  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/mips/sys/ucontext.h: Fix typo.
	Reported by Maciej W. Rozycki <macro@ds2.pg.gda.pl>.

2000-06-02  Ulrich Drepper  <drepper@redhat.com>

	* elf/rtld.c (process_envvars): Test for = after variable name.

2000-06-01  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/initfini.c (_init): One less relocation.  Don't
	have extra call to __gmon_start__, use the pointer we already have.

	* elf/elf.h (ELF64_R_INFO): Cast sym value to Elf64_Xword before
	shifting.

	* sysdeps/i386/elf/setjmp.S: Work around change is recent
	binutils.  gas now emits a jump through the PLT instead of a
	relative jump if the jump target is an exported symbol.

2000-05-31  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/powerpc/aix/aix-termios.h: Define AIX_CBAUD.

2000-05-31  Andreas Jaeger  <aj@suse.de>
